- make Spec->build works with rpm-4.9
- make initdb do all the needed work

Version 0.26 - 21 December 2011

- fix for a random segfault
- report script errors

Version 0.25 - 14 December 2011

- disable tests segfaulting in rpmSpecBuild()
- disable tests using unimplemented functions regarding rpm-4.9
- disable 2 tests that fails with rpm-4.9
  (all functions needed by iurt & youri* pass the testsuite)
- implement more functions with rpm-4.9

Version 0.24 - 09 November 2011

- add rpm-4.6 support (pixel, 2009-01-20)
- add rpm-4.8 support (Dexter Morgan, 2011-02)
- add rpm-4.9 support (tv, 2011-08)
- drop support for rpm-4.4.x (spaghetti...)